--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/git,macos,node,react
-# Edit at https://www.toptal.com/developers/gitignore?templates=git,macos,node,react
+# Created by https://www.toptal.com/developers/gitignore/api/terraform,macos,node,react,git
+# Edit at https://www.toptal.com/developers/gitignore?templates=terraform,macos,node,react,git
 
 ### Git ###
 # Created by git for backups. To disable backups in Git:
@@ -202,4 +202,40 @@ psd
 thumb
 sketch
 
-# End of https://www.toptal.com/developers/gitignore/api/git,macos,node,react
+### Terraform ###
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
+crash.*.log
+
+# Exclude all .tfvars files, which are likely to contain sensitive data, such as
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
+# to change depending on the environment.
+*.tfvars
+*.tfvars.json
+
+# Ignore override files as they are usually used to override resources locally and so
+# are not checked in
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Include override files you do wish to add to version control using negated pattern
+# !example_override.tf
+
+# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
+# example: *tfplan*
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
+
+# End of https://www.toptal.com/developers/gitignore/api/terraform,macos,node,react,git
