--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +14,5 @@
     "express": "^4.18.2",
     "mysql2": "^3.9.1",
     "nodemon": "^3.0.3"
-  },
-  "proxy": "http://localhost:3333/"
+  }
 }
