--- a/frontend/ansible/playbook.yaml
+++ b/frontend/ansible/playbook.yaml
@@ -19,8 +19,7 @@
     - name: cp build
       shell:
         cmd: |
-          pwd
-          ls -l
+          echo ${PWD}
           cd /my/frontend
           cp -r build/* /usr/share/nginx/html
 
