--- a/frontend/ansible/playbook.yaml
+++ b/frontend/ansible/playbook.yaml
@@ -23,6 +23,6 @@
         owner: ec2-user
         group: ec2-user
         mode: 0755
-
+        remote_src: yes
     - name: start nginx
       command: systemctl start nginx
