--- a/frontend/ansible/playbook.yaml
+++ b/frontend/ansible/playbook.yaml
@@ -15,14 +15,17 @@
       file:
         path: /usr/share/nginx/html
         state: directory
-
-    - name: copy html
-      ansible.builtin.copy:
-        src: /var/lib/jenkins/workspace/ASDF/my/frontend/build/*
-        dest: /usr/share/nginx/html
-        owner: ec2-user
-        group: ec2-user
-        mode: 0755
-        remote_src: yes
+    - name: copy build
+      shell:
+        cmd: |
+          cp -r build/* /usr/share/nginx/html
+    # - name: copy html
+    #   ansible.builtin.copy:
+    #     src: /var/lib/jenkins/workspace/ASDF/my/frontend/build/*
+    #     dest: /usr/share/nginx/html
+    #     owner: ec2-user
+    #     group: ec2-user
+    #     mode: 0755
+    #     remote_src: yes
     - name: start nginx
       command: systemctl start nginx
