--- a/frontend/ansible/playbook.yaml
+++ b/frontend/ansible/playbook.yaml
@@ -21,7 +21,7 @@
     #       cp -r build/* /usr/share/nginx/html
     - name: copy html
       copy:
-        src: /var/lib/jenkins/workspace/ASDF/my/frontend/build/
+        src: "{{ workspace }}/ASDF/my/frontend/build/"
         dest: /usr/share/nginx/html
         owner: ec2-user
         group: ec2-user
