--- a/frontend/ansible/playbook.yaml
+++ b/frontend/ansible/playbook.yaml
@@ -21,11 +21,11 @@
     #       cp -r build/* /usr/share/nginx/html
     - name: copy html
       copy:
-        src: "{{ workspace }}/ASDF/my/frontend/build/"
+        src: var/lib/jenkins/workspace/ASDF/my/frontend/build/
         dest: /usr/share/nginx/html
         owner: ec2-user
         group: ec2-user
         mode: 0755
-        remote_src: yes
+
     - name: start nginx
       command: systemctl start nginx
