--- a/server/ansible/playbook.yaml
+++ b/server/ansible/playbook.yaml
@@ -19,8 +19,6 @@
     - name: start npm
       shell:
         cmd: |
-          export NVM_DIR="$HOME/.nvm"
-          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" 
-          [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion" 
+          . ~/.nvm/nvm.sh
           npm install
           npm start
