--- a/server/ansible/playbook.yaml
+++ b/server/ansible/playbook.yaml
@@ -15,6 +15,9 @@
       ansible.builtin.copy:
         src: /var/lib/jenkins/workspace/backend/my/server/
         dest: /home/ec2-user
+        owner: ec2-user
+        group: ec2-user
+        mode: 0755
 
     - name: kill npm
       command: pkill -f 'npm start'
