--- a/server/ansible/playbook.yaml
+++ b/server/ansible/playbook.yaml
@@ -14,11 +14,12 @@
 
     - name: copy
       ansible.builtin.copy:
-        src: /var/lib/jenkins/workspace/backend/my/server/
+        src: /var/lib/jenkins/workspace/backend/my/server
         dest: /home/ec2-user/
         owner: ec2-user
         group: ec2-user
         # mode: 0755
+        ignore_errors: true
 
     - name: kill npm
       command: pkill -f 'npm start'
