--- a/server/ansible/playbook.yaml
+++ b/server/ansible/playbook.yaml
@@ -20,9 +20,13 @@
     #   group: ec2-user
     #   # mode: 0755
     #   ignore_errors: true
+    # - name: copy
+    #   ansible.builtin.shell:
+    #     cmd: "cp -r /var/lib/jenkins/workspace/backend/my/server/* /home/ec2-user"
     - name: copy
-      ansible.builtin.shell:
-        cmd: "cp -r /var/lib/jenkins/workspace/backend/my/server/* /home/ec2-user"
+      ansible.builtin.copy:
+        src: /var/lib/jenkins/workspace/backend/my/server
+        dest: /home/ec2-user
 
     - name: kill npm
       command: pkill -f 'npm start'
