--- a/server/ansible/playbook.yaml
+++ b/server/ansible/playbook.yaml
@@ -11,22 +11,13 @@
           [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion" 
           nvm install 16
           node -v
-
-    # - name: copy
-    # ansible.builtin.copy:
-    #   src: /var/lib/jenkins/workspace/backend/my/server
-    #   dest: /home/ec2-user/
-    #   owner: ec2-user
-    #   group: ec2-user
-    #   # mode: 0755
-    #   ignore_errors: true
-    # - name: copy
-    #   ansible.builtin.shell:
-    #     cmd: "cp -r /var/lib/jenkins/workspace/backend/my/server/* /home/ec2-user"
-    - name: copy
+    - name: Copy files
       ansible.builtin.copy:
-        src: /var/lib/jenkins/workspace/backend/my/server
-        dest: /home/ec2-user
+        src: /var/lib/jenkins/workspace/backend/my/server/
+        dest: /home/ec2-user/
+        owner: ec2-user
+        group: ec2-user
+        mode: 0755
 
     - name: kill npm
       command: pkill -f 'npm start'
