--- a/server/ansible/playbook.yaml
+++ b/server/ansible/playbook.yaml
@@ -5,7 +5,7 @@
     - name: Copy files
       ansible.builtin.copy:
         src: /var/lib/jenkins/workspace/backend/my/server/
-        dest: /home/ec2-user/
+        dest: /home/ec2-user/server/
         owner: ec2-user
         group: ec2-user
         mode: 0755
