--- a/server/ansible/playbook.yaml
+++ b/server/ansible/playbook.yaml
@@ -2,13 +2,18 @@
   hosts: app
   become: true
   tasks:
+    - name: mkdir
+      file:
+        path: /home/ec2-user/server
+        state: directory
+
     - name: Copy files
       ansible.builtin.copy:
         src: /var/lib/jenkins/workspace/backend/my/server/
         dest: /home/ec2-user/server/
         owner: ec2-user
         group: ec2-user
-        mode: 0755
+        # mode: 0755
 
     - name: kill npm
       command: pkill -f 'npm start'
