--- a/server/ansible/playbook.yaml
+++ b/server/ansible/playbook.yaml
@@ -10,6 +10,8 @@
         owner: ec2-user
         group: ec2-user
         mode: 644
+    - name: node
+      ansible.builtin.shell: . ~/.nvm/nvm.sh
 
     - name: npm i
       ansible.builtin.shell: npm install
