--- a/server/ansible/playbook.yaml
+++ b/server/ansible/playbook.yaml
@@ -18,6 +18,8 @@
 
     - name: npm i
       ansible.builtin.shell: |
+
+        chown -R ec2-user:ec2-user server/
         cd /home/ec2-user/server
         npm install
 
