--- a/server/ansible/playbook.yaml
+++ b/server/ansible/playbook.yaml
@@ -19,6 +19,7 @@
     - name: npm i
       ansible.builtin.shell: |
         cd /home/ec2-user/server
+        rm -rf node_modules
         npm install
 
     - name: kill npm
