--- a/frontend/ansible/playbook.yaml
+++ b/frontend/ansible/playbook.yaml
@@ -6,15 +6,15 @@
     - name: install nginx
       command: amazon-linux-extras install -y nginx1
 
-    - name: remove html
-      file:
-        path: /usr/share/nginx/html
-        state: absent
+    # - name: remove html
+    #   file:
+    #     path: /usr/share/nginx/html
+    #     state: absent
 
-    - name: create html
-      file:
-        path: /usr/share/nginx/html
-        state: directory
+    # - name: create html
+    #   file:
+    #     path: /usr/share/nginx/html
+    #     state: directory
 
     - name: copy html
       ansible.builtin.copy:
