--- a/server/jenkins/jenkinsfile
+++ b/server/jenkins/jenkinsfile
@@ -19,6 +19,7 @@ pipeline {
         stage('deploy') {
             steps {
                 sh  """
+                    echo ${WORKSPACE}
                     cd my/server/asible
                     ansible-playbook -i inventory playbook.yaml
                     """
