--- a/frontend/ansible/playbook.yaml
+++ b/frontend/ansible/playbook.yaml
@@ -6,23 +6,18 @@
     - name: install nginx
       command: amazon-linux-extras install -y nginx1
 
-    # - name: remove html
-    #   file:
-    #     path: /usr/share/nginx/html
-    #     state: absent
-
-    # - name: create html
-    #   file:
-    #     path: /usr/share/nginx/html
-    #     state: directory
+    - name: remove html
+      file:
+        path: /usr/share/nginx/html
+        state: absent
 
     - name: copy html
       ansible.builtin.copy:
-        src: /var/lib/jenkins/workspace/ASDF/my/frontend/build/
+        src: /var/lib/jenkins/workspace/frontend/my/frontend/build/
         dest: /usr/share/nginx/html
         owner: ec2-user
         group: ec2-user
-        mode: 0755
+        mode: 600
 
     - name: start nginx
       command: systemctl start nginx
