--- a/frontend/jenkins/jenkinsfile
+++ b/frontend/jenkins/jenkinsfile
@@ -2,6 +2,13 @@ pipeline {
     agent any
     tools {nodejs "nodejs"}
     stages {
+
+        stage('trigger') {
+            steps {
+                
+            }
+        }
+        
         stage('slack start') {
             steps {
              slackSend color: "#439FE0", message: "Build Started: ${env.JOB_NAME} ${env.BUILD_NUMBER}"
