--- a/frontend/jenkins/jenkinsfile
+++ b/frontend/jenkins/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
 
         stage('trigger') {
             steps {
-                
+                credentialsId: 'github_access_token',
             }
         }
         
