--- a/frontend/jenkins/jenkinsfile
+++ b/frontend/jenkins/jenkinsfile
@@ -5,7 +5,9 @@ pipeline {
 
         stage('trigger') {
             steps {
+                git brach: "main",
                 credentialsId: 'github_access_token',
+                url: "https://github.com/leesanghoon94/my.git"
             }
         }
         
