--- a/server/ansible/playbook.yaml
+++ b/server/ansible/playbook.yaml
@@ -3,6 +3,11 @@
   become: true
 
   tasks:
+    - name: Tell the hots about our servers it might want to ssh to
+      ansible.builtin.Known_hosts:
+        path: ~/.ssh/known_hosts
+        name: 10.1.1.150
+
     - name: Copy files
       ansible.builtin.copy:
         src: /var/lib/jenkins/workspace/backend/my/server
