--- a/frontend/jenkins/jenkinsfile
+++ b/frontend/jenkins/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         
         stage('slack start') {
             steps {
-             slackSend (color: "#439FE0", message: "Build Started: ${env.JOB_NAME} ${env.BUILD_NUMBER}")
+             slackSend (color: "#439FE0", message: "Build Started!!: ${env.JOB_NAME} ${env.BUILD_NUMBER}")
             }
         }
         stage ('clean') {
