--- a/server/jenkins/jenkinsfile
+++ b/server/jenkins/jenkinsfile
@@ -1,6 +1,9 @@
 pipeline {
     agent any
     tools { nodejs "nodejs"}
+    triggers {
+        githubPush()
+    }
     stages {
         
         stage('slack start') {
