--- a/frontend/jenkins/jenkinsfile
+++ b/frontend/jenkins/jenkinsfile
@@ -1,6 +1,10 @@
 pipeline {
     agent any
     tools {nodejs "nodejs"}
+    triggers {
+        githubPush()
+    }
+    
     stages {
 
         
