--- a/frontend/ansible/playbook.yaml
+++ b/frontend/ansible/playbook.yaml
@@ -1,11 +1,12 @@
 - name: copy build
   hosts: app
+  remote_user: ec2-user
   become: true
 
   tasks:
-    - name: Tell the hots about our servers it might want to ssh to
-      ansible.builtin.known_hosts:
-        name: 10.1.1.133
+    # - name: Tell the hots about our servers it might want to ssh to
+    #   ansible.builtin.known_hosts:
+    #     name: 10.1.1.133
 
     - name: install nginx
       command: amazon-linux-extras install -y nginx1
@@ -21,7 +22,7 @@
         dest: /usr/share/nginx/html
         owner: ec2-user
         group: ec2-user
-        mode: 600
+        mode: 0755
 
     - name: start nginx
       command: systemctl start nginx
