--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,9 +1,7 @@
 FROM node:18 AS build
 WORKDIR /app
-COPY package* ./
+COPY .  .
 RUN npm install 
-COPY src ./src
-COPY public ./public
 RUN npm run build
 
 FROM nginx:alpine
