--- a/aws/eks-cluster/karpenter/dev.yaml
+++ b/aws/eks-cluster/karpenter/dev.yaml
@@ -3,27 +3,35 @@ kind: Provisioner
 metadata:
   name: dev
 spec:
-  provider:
-    amiFamily: Bottlerocket
-    tags:
-      accountingEC2Tag: karpenter
-      # eks/nodegroup-name: karpenter-group
-      eks/cluster-name: my-cluster
-    subnetSelector:
-      Name: "karpenter.sh/discovery/my-cluster*"
-    securityGroupSelector:
-      kubernetes.io/cluster/my-cluster: owned
-  requirements:
-    - key: karpenter.sh/capacity-type
-      operator: In
-      values: ["on-demand"]
-    - key: node.kubernetes.io/instance-type
-      operator: In
-      values: ["t3.large"]
-  ttlSecondsAfterEmpty: 30
   taints:
-    - key: dedicated
-      value: dev
+    - key: dev
+      value: "true"
       effect: NoSchedule
   labels:
-    deployment: dev
+    nodeType: AL2023_x86_64_STANDARD
+  requirements:
+    - key: "node.kubernetes.io/instance-type"
+      operator: In
+      values: ["t3.large"]
+    - key: "topology.kubernetes.io/zone"
+      operator: In
+      values: ["ap-northeast-2a", "ap-northeast-2c"]
+    - key: "karpenter.sh/capacity-type"
+      operator: In
+      values: ["on-demand"]
+  providerRef:
+    name: dev-lt
+  ttlSecondsAfterEmpty: 30
+  ttlSecondsUntilExpired: 1209600
+---
+apiVersion: karpenter.k8s.aws/v1alpha1
+kind: AWSNodeTemplate
+metadata:
+  name: dev-lt
+spec:
+  subnetSelector:
+    karpenter.sh/discovery/my-cluster: "*"
+  securityGroupSelector:
+    aws:eks:cluster-name: my-cluster # do not change
+  tags:
+    karpenter.sh/discovery: my-cluster
