--- a/aws/eks-cluster/karpenter/karpenter-test-pod.yaml
+++ b/aws/eks-cluster/karpenter/karpenter-test-pod.yaml
@@ -17,8 +17,8 @@ spec:
         - name: nginx
           image: nginx
           imagePullPolicy: IfNotPresent
-      # nodeSelector:
-      #   nodeType: dev
+      nodeSelector:
+        nodeType: dev
       tolerations:
         - effect: "NoSchedule"
           key: "dev"
