--- a/aws/eks-cluster/karpenter/nodepool.yaml
+++ b/aws/eks-cluster/karpenter/nodepool.yaml
@@ -11,11 +11,10 @@ spec:
     metadata:
       # Labels are arbitrary key-values that are applied to all nodes
       labels:
-        billing-team: my-team
-
+        nodeType: dev
       # Annotations are arbitrary key-values that are applied to all nodes
       annotations:
-        example.com/owner: "my-team"
+
     spec:
       # References the Cloud Provider's NodeClass resource, see your cloud provider specific documentation
       nodeClassRef:
@@ -29,13 +28,17 @@ spec:
         - key: CriticalAddonsOnly
           value: "true"
           effect: NoSchedule
+        - key: dev
+          value: "true"
+          effect: NoSchedule
 
       # Provisioned nodes will have these taints, but pods do not need to tolerate these taints to be provisioned by this
       # NodePool. These taints are expected to be temporary and some other entity (e.g. a DaemonSet) is responsible for
       # removing the taint after it has finished initializing the node.
       startupTaints:
-        - key: example.com/another-taint
-          effect: NoSchedule
+        # - key: dev
+        #   value: "true"
+        #   effect: NoSchedule
 
       # Requirements that constrain the parameters of provisioned nodes.
       # These requirements are combined with pod.spec.topologySpreadConstraints, pod.spec.affinity.nodeAffinity, pod.spec.affinity.podAffinity, and pod.spec.nodeSelector rules.
@@ -47,10 +50,10 @@ spec:
           values: ["t3.large"]
         - key: "karpenter.k8s.aws/instance-category"
           operator: In
-          values: ["c", "m", "r"]
+          values: ["t"]
         - key: "karpenter.k8s.aws/instance-cpu"
           operator: In
-          values: ["4", "8", "16", "32"]
+          values: ["2"]
         - key: "karpenter.k8s.aws/instance-hypervisor"
           operator: In
           values: ["nitro"]
@@ -62,7 +65,7 @@ spec:
           values: ["ap-northeast-2a", "ap-northeast-2c"]
         - key: "kubernetes.io/arch"
           operator: In
-          values: ["arm64", "amd64"]
+          values: ["amd64"]
         - key: "karpenter.sh/capacity-type"
           operator: In
           values: ["on-demand"]
@@ -105,7 +108,7 @@ spec:
     # Describes which types of Nodes Karpenter should consider for consolidation
     # If using 'WhenUnderutilized', Karpenter will consider all nodes for consolidation and attempt to remove or replace Nodes when it discovers that the Node is underutilized and could be changed to reduce cost
     # If using `WhenEmpty`, Karpenter will only consider nodes for consolidation that contain no workload pods
-    consolidationPolicy: WhenUnderutilized | WhenEmpty
+    consolidationPolicy: WhenEmpty
 
     # The amount of time Karpenter should wait after discovering a consolidation decision
     # This value can currently only be set when the consolidationPolicy is 'WhenEmpty'
@@ -120,8 +123,8 @@ spec:
   # Resource limits constrain the total size of the pool.
   # Limits prevent Karpenter from creating new instances once the limit is exceeded.
   limits:
-    cpu: "1000"
-    memory: 1000Gi
+    cpu: "2000"
+    memory: 2000Gi
 
   # Priority given to the NodePool when the scheduler considers which NodePool
   # to select. Higher weights indicate higher priority when comparing NodePools.
@@ -135,7 +138,7 @@ metadata:
   name: default
 spec:
   # Required, resolves a default ami and userdata
-  amiFamily: AL2
+  amiFamily: AL2023
 
   # Required, discovers subnets to attach to instances
   # Each term in the array of subnetSelectorTerms is ORed together
@@ -166,95 +169,98 @@ spec:
   # future, but this restriction is currently in place today to ensure that Karpenter
   # avoids leaking managed instance profiles in your account.
   # Must specify one of "role" or "instanceProfile" for Karpenter to launch nodes
-  role: "KarpenterController"
+  role: "karpenter-eks-node-group-20240709110853562500000001"
 
   # Optional, IAM instance profile to use for the node identity.
   # Must specify one of "role" or "instanceProfile" for Karpenter to launch nodes
-  instanceProfile: "KarpenterNodeInstanceProfile-${CLUSTER_NAME}"
+  # instanceProfile: "eks-5cc84b9b-570a-2736-fb44-e0493d1dbae9"
 
   # Optional, discovers amis to override the amiFamily's default amis
   # Each term in the array of amiSelectorTerms is ORed together
   # Within a single term, all conditions are ANDed
-  amiSelectorTerms:
-    # Select on any AMI that has both the "karpenter.sh/discovery: ${CLUSTER_NAME}" tag
-    # AND the "environment: test" tag OR any AMI with the "my-ami" name
-    # OR any AMI with ID "ami-123"
-    - tags:
-        karpenter.sh/discovery: "${CLUSTER_NAME}"
-        environment: test
-    - name: my-ami
-    - id: ami-123
+  # amiSelectorTerms:
+  #   # Select on any AMI that has both the "karpenter.sh/discovery: ${CLUSTER_NAME}" tag
+  #   # AND the "environment: test" tag OR any AMI with the "my-ami" name
+  #   # OR any AMI with ID "ami-123"
+  #   - tags:
+  #       karpenter.sh/discovery: "my-cluster"
+  #   #     environment: test
+  #   # - name: my-ami
+  #   # - id: ami-123
 
   # Optional, overrides autogenerated userdata with a merge semantic
-  userData: |
-    echo "Hello world"
+  # userData: |
+  #   echo "Hello world"
 
   # Optional, propagates tags to underlying EC2 resources
   tags:
-    team: team-a
-    app: team-a-app
+    Name: karpenter
+    # karpenter.sh/nodeclaim: <nodeclaim-name>
+    # karpenter.sh/nodepool: <nodepool-name>
+    # karpenter.k8s.aws/ec2nodeclass: <ec2nodeclass-name>
+    # kubernetes.io/cluster/my-cluster: owned
 
   # Optional, configures IMDS for the instance
-  metadataOptions:
-    httpEndpoint: enabled
-    httpProtocolIPv6: disabled
-    httpPutResponseHopLimit: 2
-    httpTokens: required
+  # metadataOptions:==
+  #   httpEndpoint: enabled
+  #   httpProtocolIPv6: disabled
+  #   httpPutResponseHopLimit: 2
+  #   httpTokens: required
 
   # Optional, configures storage devices for the instance
-  blockDeviceMappings:
-    - deviceName: /dev/xvda
-      ebs:
-        volumeSize: 100Gi
-        volumeType: gp3
-        iops: 10000
-        encrypted: true
-        kmsKeyID: "1234abcd-12ab-34cd-56ef-1234567890ab"
-        deleteOnTermination: true
-        throughput: 125
-        snapshotID: snap-0123456789
+  # blockDeviceMappings:
+  #   - deviceName: /dev/xvda
+  #     ebs:
+  #       volumeSize: 100Gi
+  #       volumeType: gp3
+  #       iops: 10000
+  #       encrypted: true
+  #       kmsKeyID: "1234abcd-12ab-34cd-56ef-1234567890ab"
+  #       deleteOnTermination: true
+  #       throughput: 125
+  #       snapshotID: snap-0123456789
 
   # Optional, configures detailed monitoring for the instance
   detailedMonitoring: true
-status:
-  # Resolved subnets
-  subnets:
-    - id: subnet-0a462d98193ff9fac
-      zone: us-east-2b
-    - id: subnet-0322dfafd76a609b6
-      zone: us-east-2c
-    - id: subnet-0727ef01daf4ac9fe
-      zone: us-east-2b
-    - id: subnet-00c99aeafe2a70304
-      zone: us-east-2a
-    - id: subnet-023b232fd5eb0028e
-      zone: us-east-2c
-    - id: subnet-03941e7ad6afeaa72
-      zone: us-east-2a
+# status:
+#   # Resolved subnets
+#   subnets:
+#     - id: subnet-0a462d98193ff9fac
+#       zone: us-east-2b
+#     - id: subnet-0322dfafd76a609b6
+#       zone: us-east-2c
+#     - id: subnet-0727ef01daf4ac9fe
+#       zone: us-east-2b
+#     - id: subnet-00c99aeafe2a70304
+#       zone: us-east-2a
+#     - id: subnet-023b232fd5eb0028e
+#       zone: us-east-2c
+#     - id: subnet-03941e7ad6afeaa72
+#       zone: us-east-2a
 
-  # Resolved security groups
-  securityGroups:
-    - id: sg-041513b454818610b
-      name: ClusterSharedNodeSecurityGroup
-    - id: sg-0286715698b894bca
-      name: ControlPlaneSecurityGroup-1AQ073TSAAPW
+#   # Resolved security groups
+#   securityGroups:
+#     - id: sg-041513b454818610b
+#       name: ClusterSharedNodeSecurityGroup
+#     - id: sg-0286715698b894bca
+#       name: ControlPlaneSecurityGroup-1AQ073TSAAPW
 
-  # Resolved AMIs
-  amis:
-    - id: ami-01234567890123456
-      name: custom-ami-amd64
-      requirements:
-        - key: kubernetes.io/arch
-          operator: In
-          values:
-            - amd64
-    - id: ami-01234567890123456
-      name: custom-ami-arm64
-      requirements:
-        - key: kubernetes.io/arch
-          operator: In
-          values:
-            - arm64
+#   # Resolved AMIs
+#   amis:
+#     - id: ami-01234567890123456
+#       name: custom-ami-amd64
+#       requirements:
+#         - key: kubernetes.io/arch
+#           operator: In
+#           values:
+#             - amd64
+#     - id: ami-01234567890123456
+#       name: custom-ami-arm64
+#       requirements:
+#         - key: kubernetes.io/arch
+#           operator: In
+#           values:
+#             - arm64
 
-  # Generated instance profile name from "role"
-  instanceProfile: "${CLUSTER_NAME}-0123456778901234567789"
+#   # Generated instance profile name from "role"
+#   instanceProfile: "${CLUSTER_NAME}-0123456778901234567789"
