--- a/aws/eks-cluster/manifest/lb-controller/v2_8_1_full.yaml
+++ b/aws/eks-cluster/manifest/lb-controller/v2_8_1_full.yaml
@@ -662,7 +662,7 @@ metadata:
     app.kubernetes.io/component: controller
     app.kubernetes.io/name: aws-load-balancer-controller
   annotations:
-    eks.amazonaws.com/role-arn: <IB_CONTROLLER_ROLE>:arn:aws:iam::<AWS ACCOUNT ID>:role/fast-cluster-alb-controller
+    eks.amazonaws.com/role-arn: arn:aws:iam::992382792232:role/lb-controller
   name: aws-load-balancer-controller
   namespace: kube-system
 ---
