--- a/aws/eks-cluster/archive/app/ingress.yaml
+++ b/aws/eks-cluster/archive/app/ingress.yaml
@@ -5,12 +5,12 @@ metadata:
   name: app
   annotations:
     kubernetes.io/ingress.class: alb
-    alb.ingress.kubernetes.io/load-balancer-name: <lb-controller>
+    alb.ingress.kubernetes.io/load-balancer-name: alb-controller
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
     alb.ingress.kubernetes.io/healthcheck-path: /
-    alb.ingress.kubernetes.io/subnets: <public서브넷-1 ID>, <public서브넷-2 ID>
+    alb.ingress.kubernetes.io/subnets: subnet-016ee9e7d30d73bb6, subnet-0bc5f27c1cab1ce28
 spec:
   rules:
     - http:
