--- a/aws/eks-cluster/archive/app/deployment.yaml
+++ b/aws/eks-cluster/archive/app/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: <frontend:latest>
+          image: 992382792232.dkr.ecr.ap-northeast-2.amazonaws.com/front:v0.2
           ports:
             - containerPort: 80
 ---
@@ -25,7 +25,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: app
-  name: app
+  name: server
   labels:
     app: server
 spec:
@@ -40,6 +40,6 @@ spec:
     spec:
       containers:
         - name: server
-          image: <server:latest>
+          image: 992382792232.dkr.ecr.ap-northeast-2.amazonaws.com/server:v0.2
           ports:
             - containerPort: 3333
