--- a/elasticsearch/es-logstash-kibana/docker-compose.yml
+++ b/elasticsearch/es-logstash-kibana/docker-compose.yml
@@ -11,6 +11,9 @@ services:
     environment:
       ES_SETTING_BOOTSTRAP_MEMORY__LOCK: "true"
       ES_JAVA_OPTS: "-Xmx512m -Xms512m -Xlog:disable"
+      # -Xmx512m -Xms512m는 JVM의 최대 힙 메모리 크기와 초기 힙 메모리 크기를 설정하는 옵션입니다.
+      #  이 설정은 Elasticsearch가 사용할 수 있는 메모리 양을 정의합니다.
+      # -Xmx는 최대 힙 크기, -Xms는 초기 힙 크기를 지정합니다.
       node.name: es01
       node.roles: master
       network.host: 0.0.0.0
